--- a/omero_search_engine/api/v1/resources/swagger_docs/searchannotation.yml
+++ b/omero_search_engine/api/v1/resources/swagger_docs/searchannotation.yml
@@ -11,7 +11,7 @@
      "query_details": {
          "and_filters": [
            {
-             "name": "Gene Symbol",
+             "key": "Gene Symbol",
              "value": "pdx1",
              "operator": "equals"
            }
