--- a/configurations/app_config.yml
+++ b/configurations/app_config.yml
@@ -1,8 +1,3 @@
-DATABASE_SERVER_URI : "127.0.0.1"
-DATABASE_USER : "database_user"
-DATABASE_PORT: 5432
-DATABASE_PASSWORD : "password"
-DATABASE_NAME : "omero"
 CACHE_FOLDER : "path/to/folder/app_data"
 SECRET_KEY : "fsdasdh3424vvcsd467fgh"
 ASYNCHRONOUS_SEARCH : True
@@ -19,7 +14,7 @@ DATA_SOURCES:
     - name: omero1
       DATABASE:
           DATABASE_NAME: omero
-          DATABSE_USER: khaledk
-          DATABASE_PASSWORD: khaled
-          DATABASE_SERVER_URI: 192.168.0.190
+          DATABSE_USER: database_user
+          DATABASE_PASSWORD: password
+          DATABASE_SERVER_URI: 127.0.0.1
           DATABASE_PORT: 5432
