--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,7 +45,7 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt;
           # Configure database url
-          python manage.py set_database_configuration -u localhost -s  ${{ job.services.postgres.ports[5432] }} -n postgress -p passwprd
+          python manage.py set_database_configuration -u localhost -s  ${{ job.services.postgres.ports[5432] }} -n postgress -p passwprd -w omero
           # configure elasticsearch
           python manage.py set_elasticsearch_configuration -e localhost:${{ job.services.elasticsearch.ports[9200] }}
           # download and extract the database backup file           
@@ -54,7 +54,7 @@ jobs:
           # run  restore omero database
           python manage.py restore_postgresql_database
           # run indexing indexing
-          python manage.py get_index_data_from_database -b False
+          python manage.py get_index_data_from_database -b False -s omero1
           # run tests
           python -m unittest discover -s unit_tests
   upload:
