--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,7 +54,7 @@ jobs:
           # run  restore omero database
           python manage.py restore_postgresql_database -s omero1
           # run indexing indexing
-          python manage.py get_index_data_from_database -b False -s omero1
+          python manage.py get_index_data_from_database -b False 
           # run tests
           python -m unittest discover -s unit_tests
   upload:
