--- a/configurations/app_config.yml
+++ b/configurations/app_config.yml
@@ -18,3 +18,4 @@ DATA_SOURCES:
           DATABASE_PASSWORD: password
           DATABASE_SERVER_URI: 127.0.0.1
           DATABASE_PORT: 5432
+          DATABASE_BACKUP_FILE: database.sql
