--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,6 +55,7 @@ jobs:
       #test the app before bulding the image
       - name: Install dependencies and test
         run: |
+          sysctl -w vm.max_map_count=262144
           python -m pip install --upgrade pip
           pip install -r requirements.txt;
           # Configure database url
