--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -69,7 +69,11 @@ jobs:
           wget https://github.com/khaledk2/ice-archh-64/releases/download/new_re_db/omero_train.zip -P app_data
           unzip app_data/omero_train.zip -d app_data/
           # run  restore omero database
-          python manage.py restore_postgresql_database 
+          python manage.py restore_postgresql_database
+          rm app_data/omero_db_searchengine.zip
+          rm app_data/omero_train.zip
+          rm app_data/omero.pgdump
+          rm app_data/omero_train.pgdump
           # run indexing indexing
           python manage.py get_index_data_from_database -b False
           
