--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -60,7 +60,7 @@ jobs:
           pip install -r requirements.txt;
           # Configure database url
           #python manage.py set_database_configuration -u localhost -s  ${{ job.services.postgres.ports[5432] }} -n postgress -p passwprd -w omero1 -d omero -b omero.pgdump
-          python manage.py set_database_configuration -u localhost -s  ${{ job.services.postgres_2.ports[5432] }} -n postgress -p passwprd -w omero_train -d omero_train -b omero_train.pgdump          
+          python manage.py set_database_configuration -u localhost -s  ${{ job.services.postgres_2.ports[5432] }} -n postgress -p passwprd -w omero1 -d omero_train -b omero_train.pgdump          
           # configure elasticsearch
           python manage.py set_elasticsearch_configuration -e localhost:${{ job.services.elasticsearch.ports[9200] }}
           # download and extract the database backup file           
