--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,6 +43,7 @@ jobs:
         env:
           es_api_basic_auth_username: "elastic"
           ELASTIC_PASSWORD: "elasticsearch_user_password"
+          ES_JAVA_OPTS: "-Xms2g -Xmx2g"
 
         options: -e="discovery.type=single-node" --health-cmd="curl -k -u elastic:elasticsearch_user_password  https://localhost:9200/_cluster/health" --health-interval=10s --health-timeout=5s --health-retries=10
 
@@ -59,20 +60,20 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt;
           # Configure database url
-          #python manage.py set_database_configuration -u localhost -s  ${{ job.services.postgres.ports[5432] }} -n postgress -p passwprd -w omero1 -d omero -b omero.pgdump
-          python manage.py set_database_configuration -u localhost -s  ${{ job.services.postgres_2.ports[5432] }} -n postgress -p passwprd -w omero1 -d omero_train -b omero_train.pgdump          
+          python manage.py set_database_configuration -u localhost -s  ${{ job.services.postgres.ports[5432] }} -n postgress -p passwprd -w omero1 -d omero -b omero.pgdump
+          python manage.py set_database_configuration -u localhost -s  ${{ job.services.postgres_2.ports[5432] }} -n postgress -p passwprd -w omero_train -d omero_train -b omero_train.pgdump          
           # configure elasticsearch
           python manage.py set_elasticsearch_configuration -e localhost:${{ job.services.elasticsearch.ports[9200] }}
           # download and extract the database backup file           
-          #wget https://downloads.openmicroscopy.org/images/omero_db_searchengine.zip -P app_data    
-          #unzip app_data/omero_db_searchengine.zip -d app_data/  
+          wget https://downloads.openmicroscopy.org/images/omero_db_searchengine.zip -P app_data    
+          unzip app_data/omero_db_searchengine.zip -d app_data/  
           wget https://github.com/khaledk2/ice-archh-64/releases/download/new_re_db/omero_train.zip -P app_data
           unzip app_data/omero_train.zip -d app_data/
           # run  restore omero database
           python manage.py restore_postgresql_database
-          #rm app_data/omero_db_searchengine.zip
+          rm app_data/omero_db_searchengine.zip
           rm app_data/omero_train.zip
-          #rm app_data/omero.pgdump
+          rm app_data/omero.pgdump
           rm app_data/omero_train.pgdump
           # run indexing indexing
           python manage.py get_index_data_from_database -b False
