--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,7 +46,7 @@ jobs:
           ELASTIC_PASSWORD: "elasticsearch_user_password"
           ES_JAVA_OPTS: "-Xms2g -Xmx2g"
           #cluster.max_shards_per_node: 6000
-          cluster.routing.allocation.disk.watermark.flood_stage": "97%",
+          cluster.routing.allocation.disk.watermark.flood_stage": "97%"
           cluster.info.update.interval: "1m"
 
         options: -e="discovery.type=single-node" --health-cmd="curl -k -u elastic:elasticsearch_user_password  https://localhost:9200/_cluster/health" --health-interval=10s --health-timeout=5s --health-retries=10
