--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -69,10 +69,10 @@ jobs:
           # configure elasticsearch
           python manage.py set_elasticsearch_configuration -e localhost:${{ job.services.elasticsearch.ports[9200] }}
           # download and extract the database backup file           
-          wget https://downloads.openmicroscopy.org/images/omero_db_searchengine.zip -P app_data    
-          unzip app_data/omero_db_searchengine.zip -d app_data/  
-          #wget https://github.com/khaledk2/ice-archh-64/releases/download/new_re_db/omero_train.zip -P app_data
-          #unzip app_data/omero_train.zip -d app_data/
+          #wget https://downloads.openmicroscopy.org/images/omero_db_searchengine.zip -P app_data    
+          #unzip app_data/omero_db_searchengine.zip -d app_data/  
+          wget https://github.com/khaledk2/ice-archh-64/releases/download/new_re_db/omero_train.zip -P app_data
+          unzip app_data/omero_train.zip -d app_data/
           # run  restore omero database
           python manage.py restore_postgresql_database
           #rm app_data/omero_db_searchengine.zip
