--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
         env:
           POSTGRES_USER: postgress
           POSTGRES_PASSWORD: passwprd
-          POSTGRES_DB: []omero_train, omero]
+          POSTGRES_DB: omero
         ports:
           - 5432/tcp
         options: >-
@@ -60,6 +60,7 @@ jobs:
       #test the app before bulding the image
       - name: Install dependencies and test
         run: |
+          psql -c "create database omero_train owner postgress"
           sysctl -w vm.max_map_count=262144
           python -m pip install --upgrade pip
           pip install -r requirements.txt;
