--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -60,7 +60,7 @@ jobs:
       #test the app before bulding the image
       - name: Install dependencies and test
         run: |
-          psql -c "create database omero_train owner postgress"
+          sudo -u postgres psql -c "create database omero_train"
           sysctl -w vm.max_map_count=262144
           python -m pip install --upgrade pip
           pip install -r requirements.txt;
