--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
         env:
           POSTGRES_USER: postgress
           POSTGRES_PASSWORD: passwprd
-          POSTGRES_DB: omero
+          POSTGRES_DB: omero2
         ports:
           - 5432/tcp
         options: >-
@@ -59,8 +59,7 @@ jobs:
           python-version: 3.9
       #test the app before bulding the image
       - name: Install dependencies and test
-        run: |
-          sudo -u postgres psql -c "create database omero_train"
+        run: |          
           sysctl -w vm.max_map_count=262144
           python -m pip install --upgrade pip
           pip install -r requirements.txt;
