--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
         env:
           POSTGRES_USER: postgress
           POSTGRES_PASSWORD: passwprd
-          POSTGRES_DB: omero2
+          POSTGRES_DB: postgress
         ports:
           - 5432/tcp
         options: >-
@@ -60,11 +60,11 @@ jobs:
       #test the app before bulding the image
       - name: Install dependencies and test
         run: |          
-          sysctl -w vm.max_map_count=262144
           python -m pip install --upgrade pip
           pip install -r requirements.txt;
-          # Configure database url                
-           python manage.py set_database_configuration -u localhost -s  ${{ job.services.postgres.ports[5432] }} -n postgress -p passwprd -w omero1 -d omero -b omero.pgdump
+          # Configure database url  
+          sysctl -w vm.max_map_count=262144
+          python manage.py set_database_configuration -u localhost -s  ${{ job.services.postgres.ports[5432] }} -n postgress -p passwprd -w omero1 -d omero -b omero.pgdump
           python manage.py set_database_configuration -u localhost -s  ${{ job.services.postgres.ports[5432] }} -n postgress -p passwprd -w omero_train -d omero_train -b omero_train.pgdump          
           # configure elasticsearch
           python manage.py set_elasticsearch_configuration -e localhost:${{ job.services.elasticsearch.ports[9200] }}
