--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -80,6 +80,7 @@ jobs:
           rm app_data/omero.pgdump
           rm app_data/omero_train.pgdump
           # run indexing indexing
+          curl -XGET http://localhost:${{ job.services.elasticsearch.ports[9200] }}/_cluster/allocation/explain?pretty
           python manage.py get_index_data_from_database -b False
           
           # run tests
