--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -81,6 +81,8 @@ jobs:
           rm app_data/omero_train.pgdump
           # run indexing indexing
           curl -XGET http://localhost:${{ job.services.elasticsearch.ports[9200] }}/_cluster/allocation/explain?pretty
+          curl -XGET http://localhost:${{ job.services.elasticsearch.ports[9200] }}/_cluster/health?pretty=true
+          curl -XGET 'http://localhost:${{ job.services.elasticsearch.ports[9200] }}/_cluster/health?level=indices&pretty'
           python manage.py get_index_data_from_database -b False
           
           # run tests
