--- a/configurations/app_config.yml
+++ b/configurations/app_config.yml
@@ -4,12 +4,13 @@ ASYNCHRONOUS_SEARCH : True
 ELASTICSEARCH_URL : "https://localhost:9200"
 IDR_TEST_FILE_URL : "https://raw.githubusercontent.com/IDR/idr.openmicroscopy.org/master/_data/studies.tsv"
 PAGE_SIZE : 1000
-CACHE_ROWS : 10000
+CACHE_ROWS : 1000
 MAX_RETUNED_ITEMS : 1700000
 ELASTICSEARCH_BACKUP_FOLDER: "path/to/elasticsearch/backup/folder"
 verify_certs: False
 ELASTIC_PASSWORD: elasticsearch_user_password
 BASE_FOLDER: /etc/searchengine/
+NO_PROCESSES: 1
 DATA_SOURCES:
     - name: omero1
       DATABASE:
