--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -71,9 +71,8 @@ jobs:
           # run indexing indexing
           python manage.py get_index_data_from_database -b False 
           # set up the seond database
-          python manage.py set_database_configuration -u localhost -s  ${{ job.services.postgres_2.ports[5433] }} -n postgress -p passwprd -w omero_train -d omero_train -b omero_train.pgdump       
-          
-          python manage.py restore_postgresql_database -s omero1
+          python manage.py set_database_configuration -u localhost -s  ${{ job.services.postgres_2.ports[5433] }} -n postgress -p passwprd -w omero_train -d omero_train -b omero_train.pgdump      
+          #python manage.py restore_postgresql_database -s omero1
           # run tests
           python -m unittest discover -s unit_tests
   upload:
