--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
         env:
           POSTGRES_USER: postgress
           POSTGRES_PASSWORD: passwprd
-          POSTGRES_DB: postgress
+          POSTGRES_DB: omero
         ports:
           - 5432/tcp
         options: >-
@@ -22,32 +22,14 @@ jobs:
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
-      #postgres_2:
-      #  image: postgres:16
-      #  env:
-      #    POSTGRES_USER: postgress
-      #    POSTGRES_PASSWORD: passwprd
-      #    POSTGRES_DB: omero_train
-      #  ports:
-      #    - 5432/tcp
-      #  options: >-
-      #    --health-cmd pg_isready
-      #    --health-interval 10s
-      #    --health-timeout 5s
-      #    --health-retries 5
 
       elasticsearch:
         image: elasticsearch:8.8.1
         ports:
           - 9200/tcp
-          - 9300/tcp
         env:
           es_api_basic_auth_username: "elastic"
           ELASTIC_PASSWORD: "elasticsearch_user_password"
-          ES_JAVA_OPTS: "-Xms2g -Xmx2g"
-          #cluster.max_shards_per_node: 6000
-          cluster.routing.allocation.disk.watermark.flood_stage": "97%"
-          cluster.info.update.interval: "1m"
 
         options: -e="discovery.type=single-node" --health-cmd="curl -k -u elastic:elasticsearch_user_password  https://localhost:9200/_cluster/health" --health-interval=10s --health-timeout=5s --health-retries=10
 
@@ -59,32 +41,21 @@ jobs:
           python-version: 3.9
       #test the app before bulding the image
       - name: Install dependencies and test
-        run: |          
+        run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt;
-          # Configure database url  
-          sysctl -w vm.max_map_count=262144
-          # python manage.py set_database_configuration -u localhost -s  ${{ job.services.postgres.ports[5432] }} -n postgress -p passwprd -w omero1 -d omero -b omero.pgdump
-          python manage.py set_database_configuration -u localhost -s  ${{ job.services.postgres.ports[5432] }} -n postgress -p passwprd -w omero1 -d omero_train -b omero_train.pgdump          
+          # Configure database url
+          python manage.py set_database_configuration -u localhost -s  ${{ job.services.postgres.ports[5432] }} -n postgress -p passwprd
+          python manage.py set_database_configuration -u localhost -s  ${{ job.services.postgres.ports[5432] }} -n postgress -p passwprd -w omero1 -d omero -b omero.pgdump
           # configure elasticsearch
           python manage.py set_elasticsearch_configuration -e localhost:${{ job.services.elasticsearch.ports[9200] }}
           # download and extract the database backup file           
-          wget https://downloads.openmicroscopy.org/images/omero_db_searchengine.zip -P app_data    
-          unzip app_data/omero_db_searchengine.zip -d app_data/  
-          # wget https://github.com/khaledk2/ice-archh-64/releases/download/new_re_db/omero_train.zip -P app_data
-          # unzip app_data/omero_train.zip -d app_data/
+          wget https://downloads.openmicroscopy.org/images/omero_db_searchengine.zip -P app_data
+          unzip app_data/omero_db_searchengine.zip -d app_data/          
           # run  restore omero database
           python manage.py restore_postgresql_database
-          #rm app_data/omero_db_searchengine.zip
-          #rm app_data/omero_train.zip
-          #rm app_data/omero.pgdump
-          #rm app_data/omero_train.pgdump
           # run indexing indexing
-          #curl -XGET http://localhost:${{ job.services.elasticsearch.ports[9200] }}/_cluster/health?pretty=true
-          #curl -XGET http://localhost:${{ job.services.elasticsearch.ports[9200] }}/_cluster/allocation/explain?pretty
-          #curl -XGET 'http://localhost:${{ job.services.elasticsearch.ports[9200] }}/_cluster/health?level=indices&pretty'
-          python manage.py get_index_data_from_database 
-          
+          python manage.py get_index_data_from_database -b False
           # run tests
           python -m unittest discover -s unit_tests
   upload:
