--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,6 +43,7 @@ jobs:
       - name: Install dependencies and test
         run: |
           python -m pip install --upgrade pip
+          pip install --upgrade pip setuptools wheel
           pip install -r requirements.txt;
           # Configure database url
           #python manage.py set_database_configuration -u localhost -s  ${{ job.services.postgres.ports[5432] }} -n postgress -p passwprd
