--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -61,27 +61,14 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt;
           # Configure database url          
-          python manage.py set_database_configuration -u localhost -s  ${{ job.services.postgres.ports[5432] }} -n postgress -p passwprd -w omero1 -d omero -b omero.pgdump
-          # configure elasticsearch
-          python manage.py set_elasticsearch_configuration -e localhost:${{ job.services.elasticsearch.ports[9200] }}
-          # download and extract the database backup file           
-          wget https://downloads.openmicroscopy.org/images/omero_db_searchengine.zip -P app_data
-          unzip app_data/omero_db_searchengine.zip -d app_data/          
-          # run  restore omero database
-          python manage.py restore_postgresql_database
-          # run indexing indexing
-          python manage.py get_index_data_from_database -b False
-          # set up the seond database
-          rm app_data/omero_db_searchengine.zip
-          rm app_data/omero.pgdump
-          wget https://github.com/khaledk2/ice-archh-64/releases/download/new_re_db/omero_train.zip -P app_data
-          unzip app_data/omero_train.zip -d app_data/
-          rm app_data/omero_train.zip
-          python manage.py set_database_configuration -u localhost -s  ${{ job.services.postgres2.ports[5433] }} -n postgress -p passwprd -w omero_train -d omero_train -b omero_train.pgdump
-          python manage.py restore_postgresql_database -s omero_train
-          python manage.py get_index_data_from_database -b False -s omero_train
-          # run tests
-          python -m unittest discover -s unit_tests
+          python manage.py set_database_configuration -u localhost -s  ${{ job.services.postgres.ports[5432] }} -n postgress -p passwprd -w omero1 -d omero -b omero.pgdump          
+          
+          apt-get update
+          apt-get install --yes --no-install-recommends postgresql-client
+          PGPASSWORD=passwprd
+          psql -h localhost -U postgres -p ${{ job.services.postgres.ports[5432] }} -c 'CREATE DATABASE omero_train'
+ 
+
   upload:
     needs: build
     if: startsWith(github.ref, 'refs/tags')
