--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
         env:
           POSTGRES_USER: postgress
           POSTGRES_PASSWORD: passwprd
-          POSTGRES_DB: omero
+          POSTGRES_DB: postgress
           max_wal_size: 4GB
         ports:
           - 5432/tcp
