--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,7 +47,10 @@ jobs:
           pip install -r requirements.txt;
           # Configure database url          
           #python manage.py set_database_configuration -u localhost -s  ${{ job.services.postgres.ports[5432] }} -n postgress -p passwprd -w omero1 -d omero -b omero.pgdump          
-          PGPASSWORD=passwprd; psql -h localhost -U postgress -p ${{ job.services.postgres.ports[5432] }} -c 'CREATE DATABASE omero_train'
+        
+          export PGPASSWORD=passwprd;
+          echo $PGPASSWORD
+          psql -h localhost -U postgress -p ${{ job.services.postgres.ports[5432] }} -c 'CREATE DATABASE omero_train'
  
 
   upload:
