Addess JM review latest comments

--- a/configurations/app_config.yml
+++ b/configurations/app_config.yml
@@ -17,7 +17,7 @@ ALLOWED_ASYNCHRONIZED_PROCESS: 8
 REDIS_URL: 127.0.0.1
 REDIS_PORT: 6379
 QUERIES_FOLDER: path/to/queries/folder
-# quires files time to live in days
+# queries files time to live in days
 QUERIES_TTL: 7
 MAX_RESULTS_FOR_ASYNC_QUERY: 2000000
 MAX_PAGE_SIZE: 10000
